# sdlc-wizard

./: ARCHITECTURE.md  CHANGELOG.md  CI_CD.md  CLAUDE.md  CLAUDE_CODE_SDLC_WIZARD.md  CONTRIBUTING.md  README.md  SDLC.md  TESTING.md
.claude/: settings.json
.claude/hooks/: sdlc-prompt-check.sh  tdd-pretool-check.sh
.claude/skills/sdlc/: SKILL.md
.claude/skills/testing/: SKILL.md
.github/: last-checked-version.txt
.github/prompts/: analyze-community.md  analyze-release.md
.github/workflows/: autofix.yml  ci-autofix.yml  ci-self-heal.yml  ci.yml  daily-update.yml  monthly-research.yml  pr-review.yml  weekly-community.yml
plans/: AUTO_SELF_UPDATE.md
tests/: test-analysis-schema.sh  test-compliance.sh  test-cusum.sh  test-evaluate-bugs.sh  test-external-benchmark.sh  test-hooks.sh  test-score-analytics.sh  test-sdp-calculation.sh  test-self-heal-simulation.sh  test-stats.sh  test-token-extraction.sh  test-version-logic.sh  test-workflow-triggers.sh
tests/e2e/: baselines.json  check-compliance.sh  cusum.sh  evaluate.sh  external-baseline.json  golden-scores.json  pairwise-compare.sh  run-simulation.sh  run-tier2-evaluation.sh  score-analytics.sh  score-history.jsonl  self-heal-ci-failure.md  test-eval-prompt-regression.sh  test-eval-validation.sh  test-json-extraction.sh  test-multi-call-eval.sh  test-pairwise-compare.sh  test-self-heal-simulation.sh  test-simulation-prompt.sh
tests/e2e/fixtures/fresh-python/: README.md  pyproject.toml
tests/e2e/fixtures/fresh-python/src/fresh_python_app/: __init__.py  main.py
tests/e2e/lib/: deterministic-checks.sh  (+8 more)
(+53 files in other folders)
