[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fresh-python-app"
version = "0.1.0"
description = "A greenfield Python project for SDLC wizard testing"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "ruff>=0.3.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
